Revert "fix: get rid of overflow"
This reverts commit 29ee59df3b3b96190f091471741821baa8dc74b4.

--- a/src/app.css
+++ b/src/app.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  overflow: hidden;
-}
-
 .loader {
   width: 18px;
   height: 18px;
